change font family

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                 <img src="./img/its-me.png" class="mr-7" width="150" height="150" alt="My image">
 
                 <div class="flex flex-col justify-between py-3">
-                    <h2 class="text-5xl font-bold font-Chakra ">Mirodil To'lamirzayev</h2>
+                    <h2 class="text-4xl font-bold font-mainFont">Mirodil To'lamirzayev</h2>
                     <h3 class="font-mainFont text-gray-600 font-medium leading-[-0px] text-2xl">Social networks:</h3>
 
                     <ul class="flex items-center space-x-3">
