--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Orbitron:wght@400..900&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="./output.css">
+    <link rel="stylesheet" href="./src/output.css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
         <div class="container">
             <div class="flex mb-5">
                 <!-- my image -->
-                <img src="./img/its-me.png" class="mr-7" width="150" height="150" alt="My image">
+                <img src="./src/img/its-me.png" class="mr-7" width="150" height="150" alt="My image">
 
                 <div class="flex flex-col justify-between py-3">
                     <h2 class="text-4xl font-bold font-mainFont">Mirodil To'lamirzayev</h2>
@@ -57,22 +57,22 @@
                     <ul class="flex items-center space-x-3">
                         <li>
                             <a href="https://t.me/mirodil_web/">
-                                <img src="./img/telegram-black-icon.svg" width="27" height="27" alt="Telegram img">
+                                <img src="./src/img/telegram-black-icon.svg" width="27" height="27" alt="Telegram img">
                             </a>
                         </li>
                         <li>
                             <a href="https://t.me/mirodil_web/">
-                                <img src="./img/linkedin-square-icon.svg" width="27" height="27" alt="Telegram img">
+                                <img src="./src/img/linkedin-square-icon.svg" width="27" height="27" alt="Telegram img">
                             </a>
                         </li>
                         <li>
                             <a href="https://t.me/mirodil_web/">
-                                <img src="./img/black-instagram-icon.svg" width="27" height="27" alt="Telegram img">
+                                <img src="./src/img/black-instagram-icon.svg" width="27" height="27" alt="Telegram img">
                             </a>
                         </li>
                         <li>
                             <a href="https://t.me/mirodil_web/">
-                                <img src="./img/github-icon.svg" width="27" height="27" alt="Telegram img">
+                                <img src="./src/img/github-icon.svg" width="27" height="27" alt="Telegram img">
                             </a>
                         </li>
                     </ul>
