--- a/index.html
+++ b/index.html
@@ -18,34 +18,31 @@
 
 <body>
     <!-- HEADER -->
-    <header class=" py-3">
+    <header class=" py-3 shadow-sm">
         <div class="container justify-between items-center flex">
 
             <!-- title -->
             <a href="./index.html" class="font-medium font-sans hover:opacity-80 duration-100">
-                <h1 class=" text-2xl drop-shadow-xl font-mainFont">Mirodil Web</h1>
-                <span class="text-gray-500 font-Chakra font-normal">Front-End Web Developer</span>
+                <h1 class=" text-xl drop-shadow-xl font-mainFont">Mirodil Web</h1>
+                <span class="text-gray-500 font-Chakra font-normal">Front-end Web Developer</span>
             </a>
 
-            <nav>
-                <ul class="flex justify-between items-center space-x-4">
-                    <li
-                        class="hover:bg-black shadow-sm hover:text-white rounded-md  ease-linear px-3 py-1 duration-100  border-black border">
-                        <a href="./projects.html" class="font-medium font-mainFont text-sm  ">Projects</a>
-                    </li>
-                    <li
-                        class="hover:bg-black shadow-sm hover:text-white rounded-md  ease-linear px-3 py-1 duration-100  border-black border">
-                        <a href="./projects.html" class="font-mainFont text-sm font-semibold  ">About Me</a>
-                    </li>
-                </ul>
-            </nav>
+
+            <!-- projects -->
+            <a href="./projects.html"
+                class="font-medium font-mainFont hover:bg-black shadow-sm hover:text-white rounded-md  ease-linear px-3 py-2 duration-100  border-black border text-sm  ">
+                Projects
+            </a>
+
 
         </div>
     </header>
 
     <!-- main -->
-    <main class="py-20">
-        <div class="container">
+    <main class="py-16">
+
+        <div class="container pb-12">
+
             <div class="flex mb-5">
                 <!-- my image -->
                 <img src="./src/img/its-me.png" class="mr-7" width="150" height="150" alt="My image">
@@ -56,22 +53,22 @@
 
                     <ul class="flex items-center space-x-3">
                         <li>
-                            <a href="https://t.me/mirodil_web/">
+                            <a target="_blank" href="https://t.me/mirodil_web/">
                                 <img src="./src/img/telegram-black-icon.svg" width="27" height="27" alt="Telegram img">
                             </a>
                         </li>
                         <li>
-                            <a href="https://t.me/mirodil_web/">
+                            <a target="_blank" href="https://www.linkedin.com/in/mirodil-to-lamirzayev-608b93276/">
                                 <img src="./src/img/linkedin-square-icon.svg" width="27" height="27" alt="Telegram img">
                             </a>
                         </li>
                         <li>
-                            <a href="https://t.me/mirodil_web/">
+                            <a target="_blank" href="https://instagram.com/mirodil_web/">
                                 <img src="./src/img/black-instagram-icon.svg" width="27" height="27" alt="Telegram img">
                             </a>
                         </li>
                         <li>
-                            <a href="https://t.me/mirodil_web/">
+                            <a target="_blank" href="https://github.com/mirodil-web/">
                                 <img src="./src/img/github-icon.svg" width="27" height="27" alt="Telegram img">
                             </a>
                         </li>
@@ -84,10 +81,70 @@
             <span class="text-2xl text-gray-700">Life is simple, we make it complicated.</span>
 
         </div>
+
+        <div class="container flex justify-center">
+            <h3 class="text-xl mb-5 font-bold font-Chakra ">About Me</h3>
+        </div>
+        <div class="container flex justify-between w-full">
+            <div class=" flex items-center flex-col mr-10">
+
+                <ul class="space-y-4 font-Chakra font-medium">
+                    <li class="list-disc">
+                        Salom! Men frontend dasturchiman. Bir necha yildan beri web-saytlar va ilovalar yaratish
+                        bilan shug'ullanaman. Asosan HTML, CSS, JavaScript, va React bilan ishlayman. Mening asosiy
+                        vazifam –
+                        web-saytlarnifoydalanuvchilar uchun chiroyli, qulay va tez ishlaydigan qilish.
+
+                    </li>
+                    <li class="list-disc">
+                        Dizayn jihatdan ham, texnik tomondan ham saytlarimni eng yaxshi holatda chiqishi uchun harakat
+                        qilaman. Yani, saytning qanday ko'rinishidan tortib, qanday ishlashigacha e’tibor beraman.
+                        Saytlarning mobil
+                        qurilmalarda
+                        ham yaxshi ko'rinishi va ishlashi uchun responsive dizaynlar qilaman – ya'ni har qanday ekranda
+                        moslashib ishlaydi.
+                    </li>
+
+                    <li class="list-disc">
+                        Men uchun eng muhimi – foydalanuvchilar saytni ishlatishda hech qanday qiyinchilik
+                        sezmasliklari.
+                        Shuning uchun, yaratgan loyihalarimda har doim soddalik va qulaylikka intilaman. Sayt nafaqat
+                        tez ishlashi, balki
+                        tushunarli va yoqimli ko'rinishda bo'lishi kerak, deb hisoblayman.
+                    </li>
+
+                    <li class="list-disc">
+                        Texnologiyalar tez o'zgarib turadi, shuning uchun doim yangiliklarni kuzatib boraman va yangi
+                        bilimlarni o'rganishga harakat qilaman. Oldinga intilib, yaxshi web-ilovalar va veb-saytlar
+                        yaratishni maqsad qilganman.
+                    </li>
+
+                </ul>
+            </div>
+
+            <div>
+                <h4 class="font-mainFont font-bold mb-5">My skills:</h4>
+                <div class=" grid grid-cols-3 gap-4">
+                    <img src="./src/img/html.png" class="drop-shadow-lg " width="270" height="270" alt="Skills img">
+                    <img src="./src/img/css.png" class="drop-shadow-lg " width="270" height="270" alt="Skills img">
+                    <img src="./src/img/sass.png" class="drop-shadow-lg " width="270" height="270" alt="Skills img">
+                    <img src="./src/img/bootstrap.png" class="drop-shadow-lg " width="270" height="270"
+                        alt="Skills img">
+                    <img src="./src/img/tailwind.png" class="drop-shadow-lg " width="270" height="270" alt="Skills img">
+                    <img src="./src/img/js.png" class="drop-shadow-lg " width="270" height="270" alt="Skills img">
+                    <img src="./src/img/react.png" class="drop-shadow-lg " width="270" height="270" alt="Skills img">
+                    <img src="./src/img/redux.png" class="drop-shadow-lg " width="270" height="270" alt="Skills img">
+                    <img src="./src/img/github.png" class="drop-shadow-lg " width="270" height="270" alt="Skills img">
+                    <img src="./src/img/git.png" class="drop-shadow-lg " width="270" height="270" alt="Skills img">
+                    <img src="./src/img/figma.png" class="drop-shadow-lg " width="270" height="270" alt="Skills img">
+
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- footer -->
-    <footer class="fixed bottom-0 shadow-lg w-full py-5 ">
+    <footer class=" bottom-0 shadow-lg w-full py-5 ">
         <div class="container flex justify-center ">
             <p class="text-gray-500 text-xs font-mainFont">&copy; 2024 Mirodil To'lamirzayev</p>
         </div>
