text sizing changed

--- a/index.html
+++ b/index.html
@@ -83,12 +83,13 @@
         </div>
 
         <div class="container flex justify-center">
-            <h3 class="text-xl mb-5 font-bold font-Chakra ">About Me</h3>
+            <h3 class="text-2xl mb-5 font-bold font-Chakra ">About Me</h3>
         </div>
         <div class="container flex justify-between w-full">
             <div class=" flex items-center flex-col mr-10">
 
-                <ul class="space-y-4 font-Chakra font-medium">
+                <!-- about text -->
+                <ul class="space-y-4 font-Chakra font-semibold">
                     <li class="list-disc">
                         Salom! Men frontend dasturchiman. Bir necha yildan beri web-saytlar va ilovalar yaratish
                         bilan shug'ullanaman. Asosan HTML, CSS, JavaScript, va React bilan ishlayman. Mening asosiy
@@ -122,8 +123,9 @@
                 </ul>
             </div>
 
+            <!-- Skills -->
             <div>
-                <h4 class="font-mainFont font-bold mb-5">My skills:</h4>
+                <h4 class="font-mainFont font-bold text-xl mb-5">My skills:</h4>
                 <div class=" grid grid-cols-3 gap-4">
                     <img src="./src/img/html.png" class="drop-shadow-lg " width="270" height="270" alt="Skills img">
                     <img src="./src/img/css.png" class="drop-shadow-lg " width="270" height="270" alt="Skills img">
